crear user exitosamente

--- a/frontend-server/src/main/resources/static/index.html
+++ b/frontend-server/src/main/resources/static/index.html
@@ -4,20 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personas</title>
-    <style>
-        table{
-            border-collapse: collapse;
-            width: 100%;
-        }
-        th, td{
-            border: 1 px solid #dddddd;
-            text-align: left;
-            padding: 8px;
-        }
-        th{
-            background-color: #f2f2f2;
-        }
-    </style>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <h1>Lista de Usuarios</h1>
@@ -38,7 +25,7 @@
             <!-- carga dimanica de usuarios-->
         </tbody>
     </table>
-    <button onclick="createUser()">Crear Usuario</button>
+    <a href="createUser.html" class="button-link">Crear Usuario</a>
     <script src="/js/script.js"></script>
 </body>
 </html>
