agregado de Dockerfile para el servidor de frontend

--- a/frontend-server/src/main/resources/static/index.html
+++ b/frontend-server/src/main/resources/static/index.html
@@ -27,5 +27,6 @@
     </table>
     <a href="createUser.html" class="button-link">Crear Usuario</a>
     <script src="/js/script.js"></script>
+    <script src="./js/deteteUser.js"></script>
 </body>
 </html>
